@@ -1,13 +1,14 @@
 require 'open-uri'
+
 class RawhideVersion
   # Retrieve rawhide version
   def self.version
-    url = 'https://admin.fedoraproject.org/pkgdb/api/collections?pattern=master'
-    uri = open(url).read
-    result = JSON.parse(uri)
-    result['collections'][0]['dist_tag'].gsub(/.fc/, '').to_i
+    uri = 'https://admin.fedoraproject.org/pkgdb/api/collections?pattern=master'
+    result = JSON.load(open(uri))
+    result['collections'][0]['dist_tag'].gsub(/\.fc/, '').to_i
   end
 
+  # Create file containting rawhide version for easy traversal
   def self.create_file
     version = self.version.to_s
     filename = 'rawhide'
