@@ -2,6 +2,7 @@ v 0.10.1
 
 - Refactor static pages
 - Colorize columns of outdated packages
+- Bump rawhide version to 22
 
 v 0.10.0
 
